--- a/templates/welcome_form.html
+++ b/templates/welcome_form.html
@@ -12,7 +12,7 @@
                 <tr>
                     <td><label for="username">Username:</label></td>
                     <td>
-                        <input name="username" type="text">
+                        <input name="username" type="text" value="{{username}}">
                     </td>
                     <td><p class="error">{{username_error}}</p></td>
                 </tr>
@@ -33,7 +33,7 @@
                 <tr>
                     <td><label for="email">Email (optional):</label></td>
                     <td>
-                        <input name="email" value="">
+                        <input name="email" value="{{email}}">
                     </td>
                     <td><p class="error">{{email_error}}</p></td>
                 </tr>
