--- a/templates/welcome_form.html
+++ b/templates/welcome_form.html
@@ -33,7 +33,7 @@
                 <tr>
                     <td><label for="email">Email (optional):</label></td>
                     <td>
-                        <input name="email" value="{{email}}">
+                        <input name="email" type="text" value="{{email}}">
                     </td>
                     <td><p class="error">{{email_error}}</p></td>
                 </tr>
